# DiT

./: pyproject.toml  run_DiT.ipynb  sample_ddp.py
