[tool.poetry]
name = "dit"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "<2.0.1"
jupyter = "^1.0.0"
diffusers = "^0.26.3"
timm = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
